<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_office"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/address"
            android:visible="false" />
        <item
            android:id="@+id/nav_user"
            android:title="@string/nav_user">
            <menu>
                <item
                    android:id="@+id/nav_my_orders"
                    android:icon="@drawable/ic_nav_order"
                    android:title="@string/nav_order" />
                <item
                    android:id="@+id/nav_wallet"
                    android:icon="@drawable/ic_nav_profile"
                    android:title="@string/nav_wallet" />

                <item
                    android:id="@+id/nav_bills"
                    android:icon="@drawable/ic_nav_order"
                    android:title="@string/nav_bills" />
            </menu>
        </item>

        <item android:title="@string/app_name">
            <menu>
                <item
                    android:id="@+id/nav_offer"
                    android:icon="@drawable/gift_card"
                    android:title="@string/offers" />
                <item
                    android:id="@+id/nav_refer"
                    android:icon="@drawable/ic_nav_share"
                    android:title="@string/nav_refer" />
                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/ic_nav_support"
                    android:title="@string/nav_support" />
                <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@drawable/ic_nav_about"
                    android:title="@string/nav_about" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_nav_about"
                    android:title="@string/nav_profile" />
                <item
                    android:id="@+id/nav_policy"
                    android:icon="@drawable/ic_nav_policy"
                    android:title="@string/nav_terms" />

            </menu>
        </item>

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_logout" />
        </menu>
    </group>
</menu>
