<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout1"
                android:layout_below="@id/image"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext"
                    android:elevation="2dp"
                    android:hint="@string/emailormobile"
                    android:inputType="number"
                    android:paddingHorizontal="20dp"
                    tools:ignore="UnusedAttribute" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mobile"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/background_three"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout2"
                android:layout_below="@id/image"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext"
                    android:elevation="2dp"
                    android:hint="@string/enetrotp"
                    android:inputType="number"
                    android:paddingHorizontal="20dp"
                    tools:ignore="UnusedAttribute" />

                <Button
                    android:id="@+id/checkotp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/otp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/background_three"
                    android:text="@string/check"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>



            <ProgressBar
                android:id="@+id/sign_in_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>